# AstBasedContext-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  agents.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/ast_context_cli/: Cargo.toml
crates/ast_context_cli/src/: main.rs
crates/ast_context_core/: Cargo.toml
crates/ast_context_core/src/: walker.rs  watcher.rs
crates/ast_context_core/src/graph/: builder.rs  code_graph.rs  mod.rs  query.rs
crates/ast_context_core/src/parser/: c_lang.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/ast_context_core/src/redundancy/: anti_patterns.rs  api_surface.rs  config_detection.rs  cross_language.rs  data_structures.rs  design_patterns.rs  helpers.rs  mod.rs  pattern_detection.rs  risk.rs  struct_enum.rs  structural.rs  testing.rs  type_suggestions.rs  types.rs
crates/ast_context_core/src/types/: edge.rs  language.rs
crates/ast_context_core/tests/: graph_builder_tests.rs  python_parser_tests.rs
crates/ast_context_mcp/: Cargo.toml
crates/ast_context_mcp/src/: main.rs  tools.rs
src/: annotate.rs  error.rs  lib.rs  main.rs  serialize.rs  setup.rs  walker.rs  watcher.rs
src/graph/: builder.rs  code_graph.rs  query.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/parser/: c_lang.rs  common.rs  cpp.rs  csharp.rs  dart.rs  go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
src/redundancy/: anti_patterns.rs  api_surface.rs  blast_radius.rs  code_quality.rs  config_detection.rs  context.rs  cross_language.rs  data_structures.rs  design_patterns.rs  function_checks.rs  helpers.rs  metrics.rs  mod.rs  optimization.rs  pattern_detection.rs  risk.rs  struct_enum.rs  structural.rs  testing.rs  type_suggestions.rs  type_system.rs  types.rs
src/types/: language.rs  mod.rs  node.rs  parse_result.rs
test_project/go/: main.go
test_project/javascript/: duplicates.js  edge_cases.js  god_class.js
test_project/python/: config_patterns.py  data_structure_issues.py  edge_cases.py  god_class.py  near_duplicates.py  optimization_patterns.py  orphan_utils.py  passthrough_wrappers.py  patterns.py  split_candidates.py
test_project/python/core/: models.py  orchestrator.py  utils.py  views.py
test_project/python/tests/: test_integration.py
test_project/rust/: Cargo.toml
test_project/rust/src/: anti_patterns_extra.rs  auth_service.rs  billing_service.rs  complexity.rs  core_utils.rs  data_structures.rs  duplicates.rs  god_struct.rs  lib.rs  models.rs  notification_service.rs  optimization_patterns.rs  orchestrator.rs  passthrough_fps.rs  shipping_service.rs  trait_impls.rs  type_patterns.rs
tests/: graph_builder_tests.rs  python_parser_tests.rs
(+9 files in other folders)
