[package]
name = "ast_context_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
petgraph = { version = "0.7", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ignore = "0.4"
log = "0.4"
rayon = "1.10"
streaming-iterator = "0.1"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-full = "0.4"

[dev-dependencies]
pretty_assertions = "1"
